# mygpt

./: .gitignore  01_what_is_a_language_model.md  02_project_setup.md  03_pytorch_primer.md  04_how_machines_learn.md  05_tokens_and_embeddings.md  06_self_attention.md  07_reusable_attention.md  10_layer_norm.md  11_transformer_block.md  12_positions_and_head.md  13_forward_pass_with_loss.md  14_training_loop.md  15_generation.md  CITATION.cff  LICENSE  README.md
_includes/: head_custom.html
chapter_states/: README.md
chapter_states/ch01/: README.md  pyproject.toml
chapter_states/ch02/: README.md  pyproject.toml
chapter_states/ch03/: README.md  pyproject.toml
chapter_states/ch03/src/mygpt/: __init__.py
chapter_states/ch04/: README.md  pyproject.toml
chapter_states/ch04/src/mygpt/: __init__.py
chapter_states/ch05/: README.md  pyproject.toml
chapter_states/ch06/: README.md  pyproject.toml
chapter_states/ch07/: README.md  pyproject.toml
chapter_states/ch08/: README.md  pyproject.toml
chapter_states/ch09/: README.md  pyproject.toml
chapter_states/ch10/: README.md  pyproject.toml
chapter_states/ch10/src/mygpt/: __init__.py  attention.py  cli.py
chapter_states/ch11/: README.md  pyproject.toml
chapter_states/ch12/: README.md  pyproject.toml
chapter_states/ch13/: README.md  pyproject.toml
chapter_states/ch13/src/mygpt/: __init__.py
chapter_states/ch14/: README.md  pyproject.toml
chapter_states/ch15/: README.md  pyproject.toml
chapter_states/ch15/src/mygpt/: __init__.py  block.py  utils.py
chapter_states/ch16/: README.md  pyproject.toml
chapter_states/ch27/: README.md  pyproject.toml
chapter_states/ch27/experiments/: 08_sgd.py
chapter_states/ch27/src/mygpt/: attention.py  checkpoint.py  model.py  tokenizer.py
docs/: 01_what_is_a_language_model.md  02_project_setup.md  02_project_setup.review.md  03_pytorch_primer.md  03_pytorch_primer.review.md  04_how_machines_learn.md  04_how_machines_learn.review.md  05_tokens_and_embeddings.md  05_tokens_and_embeddings.review.md  06_self_attention.md  06_self_attention.review.md  07_reusable_attention.md  07_reusable_attention.review.md  08_multi_head_attention.md  08_multi_head_attention.review.md  09_mlp_and_residuals.md  09_mlp_and_residuals.review.md  10_layer_norm.md  10_layer_norm.review.md  11_transformer_block.md  11_transformer_block.review.md  12_positions_and_head.md  12_positions_and_head.review.md  13_forward_pass_with_loss.md  13_forward_pass_with_loss.review.md  14_training_loop.md  14_training_loop.review.md  15_generation.md  15_generation.review.md  16_character_tokenizer.md  16_character_tokenizer.review.md  17_training_on_real_text.md  17_training_on_real_text.review.md  18_cli_and_checkpoints.md  18_cli_and_checkpoints.review.md  19_device_aware_training.md  19_device_aware_training.review.md  20_mixed_precision.md  20_mixed_precision.review.md  21_training_loop_hardening.md  (+18 more)
experiments/: 05_module.py  13_softmax.py  14_attention_by_hand.py  15_attention_running_example.py  16_buffer_vs_param.py  20_gelu_vs_relu.py  21_residual_stability.py  24_stack_two_blocks.py  27_corpus_and_batch.py  35_encode_decode.py  37_corpus_with_tokenizer.py  40_generate_shakespeare.py  43_bpe_round_trip.py  50_download_wikipedia.py
mygpt/: .gitignore  README.md  pyproject.toml
mygpt/experiments/: 42_bpe_train.py
mygpt/src/mygpt/: __init__.py  cli.py  generate.py
(+113 files in other folders)
