[project]
name = "mygpt"
version = "0.28.0"
description = "A tiny GPT-2-level language model built from scratch — the package the myGPT tutorial constructs across 28 chapters (LLM Fundamentals + Advanced Topics)."
readme = "README.md"
authors = [
    { name = "egde", email = "degertsa@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
mygpt = "mygpt.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
