[project]
name = "mygpt"
version = "0.3.0"
description = "Chapter 3: PyTorch in 20 minutes: tensors, autograd, modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
mygpt = "mygpt:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
