[project]
name = "mygpt"
version = "0.4.0"
description = "Chapter 4: How machines learn: loss, gradients, gradient descent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
mygpt = "mygpt:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
