[project]
name = "mygpt"
version = "0.13.0"
description = "Chapter 13: The forward pass with loss"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
mygpt = "mygpt.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
