[project]
name = "mygpt"
version = "0.27.0"
description = "Chapter 27: Modern recipe vs Ch.17 baseline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[project.scripts]
mygpt = "mygpt.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
